@@ -55,12 +55,12 @@
 	offsite knowledge storage ;-)
       </para>
       <para>
-        The version you are reading currently is v0.10 and has been generated
-	on 2012/11/01.
+        The version you are reading currently is v0.11 and has been generated
+	on 2012/12/16.
       </para>
     </abstract>
 
-    <edition>GLARA v0.10</edition> <!-- Update above paragraph too!! -->
+    <edition>GLARA v0.11</edition> <!-- Update above paragraph too!! -->
 
     <copyright>
       <year>2012</year>
