@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="8" value="Server" style="swimlane" vertex="1" parent="1"><mxGeometry x="140" y="50" width="560" height="280" as="geometry"/></mxCell><mxCell id="2" value="named&#xa;(BIND)" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="8"><mxGeometry x="200" y="40" width="140" height="60" as="geometry"/></mxCell><mxCell id="7" value="Zone files" style="shape=folder" vertex="1" parent="8"><mxGeometry x="210" y="150" width="120" height="120" as="geometry"/></mxCell><mxCell id="9" value="System Logger" style="label;image=img/clipart/Gear_128x128.png" vertex="1" parent="8"><mxGeometry x="20" y="210" width="140" height="60" as="geometry"/></mxCell><mxCell id="10" value="" style="endArrow=none;endFill=0;startArrow=classic;startFill=1" edge="1" parent="8" source="2" target="7"><mxGeometry as="geometry"/></mxCell><mxCell id="16" value="" style="endArrow=none;dashed=1" edge="1" parent="8" source="2" target="9"><mxGeometry as="geometry"/></mxCell><mxCell id="21" value="Config &amp; keys" style="shape=folder" vertex="1" parent="8"><mxGeometry x="20" y="120" width="120" height="60" as="geometry"/></mxCell><mxCell id="22" value="" style="endArrow=classic;endFill=1" edge="1" parent="8" source="21" target="2"><mxGeometry as="geometry"/></mxCell><mxCell id="17" value="Other BIND servers" style="text" vertex="1" parent="1"><mxGeometry x="10" y="94" width="110" height="26" as="geometry"/></mxCell><mxCell id="18" value="zone transfer" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" edge="1" parent="1" source="2" target="17"><mxGeometry as="geometry"/></mxCell><mxCell id="19" value="Clients" style="text" vertex="1" parent="1"><mxGeometry x="10" y="150" width="40" height="26" as="geometry"/></mxCell><mxCell id="20" value="query" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" edge="1" parent="1" source="2" target="19"><mxGeometry as="geometry"/></mxCell></root></mxGraphModel>
