@@ -1,3 +1,7 @@
+** (2012-12-16) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Added in regular operations view, enhanced zone handling to use domain
+	  as file name.
+
 ** (2012-12-13) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Updates on BIND, attempt to use a more structural approach on the
 	  components.
